# Basic-CPP-Projects

./: README.md
Address Book Manager/: main.cpp
Augmented-Virtual Reality Engine Component/: main.cpp
Automated Stock-Asset Trading Platform (Simulation & Console Demo)/: main.cpp
BallGame/: Ball.h  CMakeLists.txt  Game.h  Main.cpp  Paddle.h  Readme.md  Renderer.h  Shader.h
Bank Account Management System/: main.cpp
Basic Calculator GUI using Qt/: main.cpp
Basic Chat Room Simulation/: main.cpp
Basic Encryption Decryption Tool/: main.cpp
Calculator with Expression Parsing/: main.cpp
Calendar Application: GUI calendar with reminders and events/: main.cpp
Chat Application/: client.cpp  main.cpp
Command-line RSS Reader/: main.cpp
Command-line To-Do List Manager/: main.cpp
Computer Vision Object Detection Framework/: main.cpp
Contact Management System/: main.cpp
Conway’s Game of Life (Terminal version)/: main.cpp
Copy a Vector Using STL/: main.cpp
Credit Card Validator/: main.cpp
Currency Exchange Rate Simulator/: main.cpp
Data Analyzer/: main.cpp
Desktop Pomodoro Timer/: main.cpp
Digital Signal Processing Tool: Implement basic DSP algorithms/: main.cpp
Dining Philosophers Problem/: main.cpp
Drawing Application/: main.cpp
E-commerce Platform/: main.cpp
Password Manager/: .gitignore  CMakeLists.txt  Readme.md
Password Manager/src/: AuthDialog.cpp  AuthDialog.h  EncryptionUtil.cpp  EncryptionUtil.h  MainWindow.cpp  MainWindow.h  PasswordDatabase.cpp  PasswordDatabase.h  PasswordGenerator.cpp  PasswordGenerator.h  main.cpp
(+65 files in other folders)
